--- a/main.html
+++ b/main.html
@@ -10,6 +10,60 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form action="#" method="post">
+    
+    <!-- Name -->
+    <label for="name">Name*:</label>
+    <input type="text" id="name" name="name" required>
+    <br><br>
+
+    <!-- Email -->
+    <label for="email">Email*:</label>
+    <input type="email" id="email" name="email" required>
+    <br><br>
+
+    <!-- Gender -->
+    <label>Gender*:</label>
+    <input type="radio" id="male" name="gender" value="Male" required>
+    <label for="male">Male</label>
+    <input type="radio" id="female" name="gender" value="Female">
+    <label for="female">Female</label>
+    <br><br>
+
+    <!-- Laptop Brands -->
+    <label for="laptop">Laptop Brand:</label>
+    <select id="laptop" name="laptop">
+      <option value="">--Select--</option>
+      <option value="Apple">Apple</option>
+      <option value="Asus">Asus</option>
+      <option value="HP">HP</option>
+    </select>
+    <br><br>
+
+    <!-- Age -->
+    <label for="age">Age*:</label>
+    <input type="number" id="age" name="age" required>
+    <br><br>
+
+    <!-- Date of Birth -->
+    <label for="dob">Date of Birth*:</label>
+    <input type="date" id="dob" name="dob" required>
+    <br><br>
+
+    <!-- Password -->
+    <label for="password">Password*:</label>
+    <input type="password" id="password" name="password" required>
+    <br><br>
+
+    <!-- Portfolio URL -->
+    <label for="portfolio">Portfolio URL:</label>
+    <input type="url" id="portfolio" name="portfolio">
+    <br><br>
+
+    <!-- Submit Button -->
+    <button type="submit">Submit</button>
+
+  </form>
 
 </body>
 
